# conduit-op-reth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-bake.hcl
.cargo/: config.toml
.github/workflows/: checks.yaml  ci.yaml  docker-build.yaml  release.yaml
crates/conduit-evm/: Cargo.toml
crates/conduit-evm/src/: lib.rs  state_override.rs
crates/node/: Cargo.toml
crates/node/src/: args.rs  chainspec.rs  evm.rs  flashblocks_state.rs  hardforks.rs  launcher.rs  lib.rs  node.rs  proof_history.rs  slipstream.rs  state_override_fork0.rs
scripts/: check-tag-version.sh  check_sync_status.sh  pre-push
tests/fixtures/: saigon-genesis-fork0.json  saigon-genesis.json
